# HSat

./: .~lock.Progres.ods#  HSat.cabal  LICENSE  Progres.ods  README.md  testing.sh
benchs-src/Parsing/: Main.hs
src/HSat/: Make.hs  Parser.hs  Printer.hs  Problem.hs  Utils.hs  Validate.hs  Writer.hs
src/HSat/Data/: BSP.hs
src/HSat/Data/BSP/: CNF.hs  Common.hs
src/HSat/Data/BSP/CNF/: Builder.hs  Parser.hs
src/HSat/Data/BSP/Common/: Clause.hs  Clauses.hs  Literal.hs  Sign.hs  Variable.hs
src/HSat/Make/: CNF.hs  Common.hs  Config.hs  Internal.hs
src/HSat/Make/BSP/: CNF.hs
src/HSat/Make/BSP/CNF/: Internal.hs
src/HSat/Make/BSP/Common/: Clause.hs  Clauses.hs  Literal.hs
src/HSat/Make/CNF/: Internal.hs
src/HSat/Make/Config/: Class.hs  Class.hs~
src/HSat/Make/Instances/: CNF.hs  CNF.hs~
src/HSat/Make/Instances/CNF/: Internal.hs  Internal.hs~
src/HSat/Make/Instances/Common/: Clause.hs  Clause.hs~  Clauses.hs  Clauses.hs~  Literal.hs  Literal.hs~
src/HSat/Parser/: CNF.hs  Class.hs
src/HSat/Parser/CNF/: Internal.hs
src/HSat/Problem/: BSP.hs  Internal.hs  ProblemExpr.hs  ProblemType.hs  Source.hs
src/HSat/Problem/BSP/: CNF.hs  Common.hs  Internal.hs
src/HSat/Problem/BSP/CNF/: Builder.hs  Internal.hs
src/HSat/Problem/BSP/CNF/Builder/: Internal.hs
src/HSat/Problem/BSP/Common/: Clause.hs  Clauses.hs  Literal.hs  Sign.hs  Variable.hs
src/HSat/Problem/BSP/Common/Clause/: Internal.hs
src/HSat/Problem/BSP/Common/Clauses/: Internal.hs
src/HSat/Problem/BSP/Common/Variable/: Internal.hs
src/HSat/Problem/Instances/: CNF.hs  CNF.hs~  Common.hs  Common.hs~
src/HSat/Problem/Instances/CNF/: Builder.hs  Builder.hs~  Internal.hs  Internal.hs~  Parser.hs  Parser.hs~  Writer.hs  Writer.hs~
src/HSat/Problem/Instances/CNF/Builder/: Internal.hs  Internal.hs~
src/HSat/Problem/Instances/CNF/Parser/: Internal.hs  Internal.hs~
src/HSat/Problem/Instances/Common/: Clause.hs  Clauses.hs  Clauses.hs~  Literal.hs  Sign.hs  Sign.hs~  Variable.hs  Variable.hs~
src/HSat/Problem/Instances/Common/Clause/: Internal.hs
src/HSat/Problem/Instances/Common/Clauses/: Internal.hs  Internal.hs~
src/HSat/Problem/Instances/Common/Variable/: Internal.hs
src/HSat/Problem/ProblemExpr/: Class.hs  Internal.hs
src/HSat/Problem/Source/: Internal.hs
src/HSat/Solution/: BSP.hs  Class.hs
src/HSat/Solution/Instances/: CNF.hs
src/HSat/Utils/: ModuleError.hs  Printer.hs
src/HSat/Writer/: CNF.hs  Internal.hs
src/HSat/Writer/CNF/: Internal.hs
tests-src/: HSatArbitrary.hs  Test.hs  TestPrint.hs  TestPrinter.hs  TestUtils.hs
tests-src/Files/: test11-bad.cnf  test12-bad.cnf  test13-bad.cnf  test14-bad.cnf  test2-good.cnf  test3-good.cnf  test4-good.cnf  test5-good.cnf  test6-good.cnf  test8-good.cnf  test9-bad.cnf
tests-src/Test/: Data.hs  Make.hs  Parser.hs  Printer.hs  Problem.hs  Solution.hs  Utils.hs  Writer.hs
tests-src/Test/Data/: BSP.hs
tests-src/Test/Data/BSP/: CNF.hs  Common.hs
tests-src/Test/Data/BSP/CNF/: Builder.hs  Parser.hs
tests-src/Test/Data/BSP/Common/: Clause.hs  Clauses.hs  Literal.hs  Sign.hs  Variable.hs
tests-src/Test/Make/: BSP.hs  CNF.hs  Common.hs  Config.hs  Instances.hs  Internal.hs
tests-src/Test/Make/BSP/: CNF.hs  Common.hs
tests-src/Test/Make/BSP/CNF/: Internal.hs
tests-src/Test/Make/BSP/Common/: Clause.hs  Clauses.hs  Literal.hs
tests-src/Test/Make/CNF/: Internal.hs
tests-src/Test/Make/Config/: Class.hs
tests-src/Test/Make/Instances/: CNF.hs  Common.hs
tests-src/Test/Make/Instances/CNF/: Internal.hs
tests-src/Test/Make/Instances/Common/: Clause.hs  Clauses.hs  Literal.hs
tests-src/Test/Parser/: CNF.hs  Class.hs
tests-src/Test/Parser/CNF/: Internal.hs
tests-src/Test/Problem/: BSP.hs  Instances.hs  Internal.hs  ProblemExpr.hs  ProblemType.hs  Source.hs
tests-src/Test/Problem/BSP/: CNF.hs  Common.hs  Internal.hs
tests-src/Test/Problem/BSP/CNF/: Builder.hs  Internal.hs
tests-src/Test/Problem/BSP/CNF/Builder/: Internal.hs
tests-src/Test/Problem/BSP/Common/: Clause.hs  Clauses.hs  Literal.hs  Sign.hs  Variable.hs
tests-src/Test/Problem/BSP/Common/Clause/: Internal.hs
tests-src/Test/Problem/BSP/Common/Clauses/: Internal.hs
tests-src/Test/Problem/BSP/Common/Variable/: Internal.hs
tests-src/Test/Problem/Instances/: CNF.hs  Common.hs
tests-src/Test/Problem/Instances/CNF/: Builder.hs  Internal.hs  Parser.hs  Writer.hs
tests-src/Test/Problem/Instances/CNF/Builder/: Internal.hs
tests-src/Test/Problem/Instances/CNF/Parser/: Internal.hs
tests-src/Test/Problem/Instances/Common/: Clause.hs  Clauses.hs  Literal.hs  Sign.hs  Variable.hs
tests-src/Test/Problem/Instances/Common/Clause/: Internal.hs
tests-src/Test/Problem/Instances/Common/Clauses/: Internal.hs
tests-src/Test/Problem/Instances/Common/Variable/: Internal.hs
tests-src/Test/Problem/ProblemExpr/: Class.hs
tests-src/Test/Problem/Source/: Internal.hs
tests-src/Test/Solution/: BSP.hs  Class.hs  Instances.hs
tests-src/Test/Solution/Instances/: CNF.hs
tests-src/Test/Utils/: ModuleError.hs
tests-src/Test/Writer/: CNF.hs  Internal.hs
tests-src/TestPrint/: Make.hs  Parser.hs  Printer.hs  Problem.hs  Writer.hs
tests-src/TestPrint/Problem/: Instances.hs  ProblemExpr.hs  ProblemType.hs  Source.hs
tests-src/TestPrint/Problem/BSP/: CNF.hs  Common.hs
tests-src/TestPrint/Problem/BSP/CNF/: Builder.hs
tests-src/TestPrint/Problem/BSP/Common/: Clause.hs  Clauses.hs  Literal.hs  Sign.hs  Variable.hs
tests-src/TestUtils/: Limits.hs  Problem.hs  Test.hs  Validate.hs
tests-src/TestUtils/Problem/: ProblemExpr.hs  ProblemType.hs  Source.hs
tests-src/TestUtils/Problem/BSP/: CNF.hs
tests-src/TestUtils/Problem/BSP/CNF/: Builder.hs
tests-src/TestUtils/Problem/BSP/Common/: Clause.hs  Clauses.hs  Literal.hs  Sign.hs  Variable.hs
