name: HSat
version: 0.0.0.3
synopsis: A general library for analysing and finding solutions to Boolean Satisfiability Problems
homepage: https://github.com/aburnett88/HSat.git
license-file: LICENSE
author: Andrew Burnett
maintainer: andyburnett88@gmail.com
category: AI
build-type: Simple
extra-source-files: README.md
cabal-version: >=1.10

library
  Hs-Source-Dirs: src
  GHC-Options: -O2 -Werror -fwarn-unused-binds -fwarn-unused-imports
  default-language: Haskell2010
  Build-Depends:
    base >= 4.0,
    vector >=0.10,
    text >= 1.1,
    ansi-wl-pprint == 0.6.7.1,
    attoparsec,
    directory,
    MonadRandom,
    random,
    containers,
    mtl,
    either,
    bifunctors
  Exposed-Modules:
    HSat.Problem
    HSat.Problem.ProblemExpr
    HSat.Problem.ProblemType
    HSat.Problem.Source
    HSat.Problem.BSP.CNF
    HSat.Problem.BSP.CNF.Internal
    HSat.Problem.BSP.CNF.Builder
    HSat.Problem.BSP.CNF.Builder.Internal
    HSat.Problem.BSP.Common
    HSat.Problem.BSP.Common.Clause
    HSat.Problem.BSP.Common.Clause.Internal
    HSat.Problem.BSP.Common.Clauses
    HSat.Problem.BSP.Common.Clauses.Internal
    HSat.Problem.BSP.Common.Literal
    HSat.Problem.BSP.Common.Sign
    HSat.Problem.BSP.Common.Variable
    HSat.Problem.BSP.Common.Variable.Internal
    HSat.Make
    HSat.Make.Internal
    HSat.Make.Config
    HSat.Make.BSP.CNF
    HSat.Make.BSP.CNF.Internal
    HSat.Make.BSP.Common.Clauses
    HSat.Make.BSP.Common.Clause
    HSat.Make.BSP.Common.Literal
    HSat.Writer
    HSat.Writer.Internal
    HSat.Writer.CNF
    HSat.Writer.CNF.Internal
    HSat.Parser
    HSat.Parser.CNF
    HSat.Parser.CNF.Internal
    HSat.Printer

Test-Suite HSat-tests
  type: exitcode-stdio-1.0
  GHC-Options: -O2 -Werror -fwarn-unused-binds
  hs-source-dirs: tests-src
  main-is: Test.hs
  default-language: Haskell2010
  build-depends:
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    tasty-golden,
    HSat,
    base,
    vector,
    text,
    mtl,
    containers,
    directory,
    MonadRandom,
    random,
    attoparsec,
    either

Test-Suite HSat-Printer
  type: exitcode-stdio-1.0
  GHC-Options: -O2 -Werror -fwarn-unused-binds
  hs-source-dirs: tests-src
  main-is: TestPrinter.hs
  default-language: Haskell2010
  build-depends:
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    tasty-golden,
    HSat,
    base,
    vector,
    text,
    mtl,
    containers,
    directory,
    MonadRandom,
    random,
    attoparsec

Benchmark Parsing-Files
    type: exitcode-stdio-1.0
    main-is: Main.hs
    hs-source-dirs: benchs-src/Parsing
    default-language: Haskell2010
    build-depends:
      parse-dimacs,
      directory,
      HSat,
      criterion,
      base