name: HSat
version: 0.0.0.3
synopsis: A general library for analysing and finding solutions to Boolean Satisfiability Problems
homepage: https://github.com/aburnett88/HSat.git
license-file: LICENSE
author: Andrew Burnett
maintainer: andyburnett88@gmail.com
category: AI
build-type: Simple
extra-source-files: README.md
cabal-version: >=1.10

library
  Hs-Source-Dirs: src
  GHC-Options: -O2 -Werror -Wall -fno-warn-orphans
  default-language: Haskell2010
  Build-Depends:
    base >= 4.0,
    vector >=0.10,
    text >= 1.1,
    ansi-wl-pprint,
    attoparsec,
    directory,
    MonadRandom,
    random,
    containers,
    mtl,
    either,
    bifunctors,
    deepseq,
    exceptions,
    ghc-prim,
    transformers
  Exposed-Modules:
    HSat.Problem
    HSat.Problem.Internal
    HSat.Problem.ProblemExpr.Class
    HSat.Problem.Source
    HSat.Problem.Source.Internal
    HSat.Problem.Instances.CNF
    HSat.Problem.Instances.CNF.Parser
    HSat.Problem.Instances.CNF.Parser.Internal
    HSat.Problem.Instances.CNF.Writer
    HSat.Problem.Instances.CNF.Internal
    HSat.Problem.Instances.CNF.Builder
    HSat.Problem.Instances.CNF.Builder.Internal
    HSat.Problem.Instances.Common.Clause
    HSat.Problem.Instances.Common.Clause.Internal
    HSat.Problem.Instances.Common.Clauses
    HSat.Problem.Instances.Common.Clauses.Internal
    HSat.Problem.Instances.Common.Literal
    HSat.Problem.Instances.Common.Sign
    HSat.Problem.Instances.Common.Variable
    HSat.Problem.Instances.Common.Variable.Internal
    HSat.Solution.Class
    HSat.Make
    HSat.Make.Config.Class
    HSat.Make.Common
    HSat.Make.Instances.CNF
    HSat.Make.Instances.CNF.Internal
    HSat.Make.Instances.Common.Clauses
    HSat.Make.Instances.Common.Clause
    HSat.Make.Instances.Common.Literal
    HSat.Writer
    HSat.Parser
    HSat.Parser.Class
    HSat.Printer

Test-Suite HSat-tests
  type: exitcode-stdio-1.0
  GHC-Options: -O2 -Werror -Wall -fno-warn-orphans
  hs-source-dirs: tests-src
  main-is: Test.hs
  default-language: Haskell2010
  build-depends:
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    tasty-golden,
    HSat,
    base,
    vector,
    text,
    mtl,
    containers,
    directory,
    MonadRandom,
    random,
    attoparsec,
    either,
    exceptions

Test-Suite HSat-Printer
  type: exitcode-stdio-1.0
  GHC-Options: -O2 -Werror -Wall -fno-warn-orphans
  hs-source-dirs: tests-src
  main-is: TestPrinter.hs
  default-language: Haskell2010
  build-depends:
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    tasty-golden,
    HSat,
    base,
    vector,
    text,
    mtl,
    containers,
    directory,
    MonadRandom,
    random,
    attoparsec

Benchmark Parsing-Files
    type: exitcode-stdio-1.0
    main-is: Main.hs
    hs-source-dirs: benchs-src/Parsing
    GHC-Options: -O2 -Werror -Wall -fno-warn-orphans
    default-language: Haskell2010
    build-depends:
      parse-dimacs,
      directory,
      HSat,
      criterion,
      base